--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name="viewport">
-		<title>ordeble.github.io | ارتق بتجربتك في التسوق مع معرفة خبراء المنتجات.</title>
+		<title>londesc.github.io | ارتق بتجربتك في التسوق مع معرفة خبراء المنتجات.</title>
 		<meta name="robots" content="noindex,follow">
 		<meta content="#fafff7" name="theme-color">
 		<meta content="#fafff7" name="msapplication-navbutton-color">
